--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>MindEase</title>
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles/style.css">
           <link rel="stylesheet" href="styles/breathing.css">
             <link rel="stylesheet" href="styles/resources.css">
               <link rel="stylesheet" href="styles/affirmations.css">
